# Create Glew for VS projects.

find_package( OpenGL REQUIRED )

include_directories( ${GLEW_DIR}/include )


set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELEASE "${CMAKE_BINARY_DIR}/Release/${GAMELIB_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_DEBUG "${CMAKE_BINARY_DIR}/Debug/${GAMELIB_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_MINSIZEREL "${CMAKE_BINARY_DIR}/MinSizeRel/${GAMELIB_OUTPUT_DIR}" )
set( CMAKE_RUNTIME_OUTPUT_DIRECTORY_RELWITHDEBINFO "${CMAKE_BINARY_DIR}/RelWithDebInfo/${GAMELIB_OUTPUT_DIR}" )

add_library( INTERNAL_GLEW STATIC ${GLEW_DIR}/src/glew.c )
set_property( TARGET INTERNAL_GLEW PROPERTY COMPILE_DEFINITIONS GLEW_BUILD )

target_link_libraries( INTERNAL_GLEW ${OPENGL_LIBRARIES} )